--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -22,7 +22,7 @@
 <resources>
 
 	<!-- Is the device capable of hot swapping an UICC Card -->
-	<bool name="config_hotswapCapable">false</bool>
+	<bool name="config_hotswapCapable">true</bool>
 
     <!-- Hardware keys present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
